[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb_molecular_complexity"
version = "0.1.0"
description = "Molecular complexity MC1 and MC2 Calculation"
readme = "README.rst"
authors = [
  {name = "Ye Buehler", email = "ye.buehler-feng@unibe.ch"}
]
maintainers = [
  {name = "Ye Buehler", email = "ye.buehler-feng@unibe.ch"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Ye-Buehler/gdb_molecular_complexity/issues"
changelog = "https://github.com/Ye-Buehler/gdb_molecular_complexity/blob/master/changelog.md"
homepage = "https://github.com/Ye-Buehler/gdb_molecular_complexity"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

